--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-forms-extra",
-  "version": "0.1.1",
+  "version": "0.2.0-dev",
   "description": "Angular2 Forms Extensions",
   "keywords": [
     "angular2",
