Input control no longer required to be inside a form.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "strictNullChecks": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "noEmitOnError": true,
     "newLine": "LF",
     "lib": [
       "dom",
